--- a/src/features/navigation/Navigation.module.css
+++ b/src/features/navigation/Navigation.module.css
@@ -1,11 +1,15 @@
 .nav_link {
-  display: grid;
+  display: flex;
   justify-content: center;
-  font-size: x-large;
-  color: blue;
+  align-items: center;
+  align-content: center;
+  font-size: large;
+  color: rgb(15, 20, 25);
   text-decoration: none; /* no underline */
+  padding: 10px 0;
 }
 
 .nav_link:hover {
-  color: #228be6;
+  background-color: rgba(15, 20, 25, 0.1);
+  border-radius: 15px;
 }
