--- a/src/features/navigation/Navigation.module.css
+++ b/src/features/navigation/Navigation.module.css
@@ -4,12 +4,28 @@
   align-items: center;
   align-content: center;
   font-size: large;
-  color: rgb(15, 20, 25);
+  color: inherit;
   text-decoration: none; /* no underline */
   padding: 10px 0;
 }
 
 .nav_link:hover {
   background-color: rgba(15, 20, 25, 0.1);
+  border-radius: 15px;
+}
+
+.nav_link_dark {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-size: large;
+  color: inherit;
+  text-decoration: none; /* no underline */
+  padding: 10px 0;
+}
+
+.nav_link_dark:hover {
+  background-color: rgba(231, 233, 234, 0.1);
   border-radius: 15px;
 }
